# jsonrpc-usecase

./: Cargo.toml  README.md
jsonrpc-usecase-macros/: Cargo.toml
jsonrpc-usecase-macros/src/: lib.rs
src/: axum.rs  case.rs  config.rs  error.rs  event.rs  guard.rs  lib.rs  method.rs  registry.rs  request.rs  response.rs  service.rs  use_case.rs
tests/: jsonrpc_service.rs
